# cocot

./: CMakeLists - Copy.txt  CMakeLists.txt  README.md  main.cpp
third/sdl/: CMakeLists.txt
